class Strings {
  // Generic strings
  static const String appName = 'Here Comes The Sun';

  // Widget Error Details
  static const String errorDefault = 'An error occured.';
  static const String retryButton = 'Réessayer';

  // HomeWeatherPage
  static const String welcomeMessage =
      'Dear staff, welcome to the app "Here Comes The Sun". \n\nYou will find here all the information you need to prepare the upcoming shows of the Beatles. \n\nTo check the weather, start by selecting a city !';
  static const String pickCity = 'Pick a city';
  static const String changeCity = 'Change city';
  static const String nextDays = 'Next days';
  static const String today = 'Today';
  static const String weatherMin = 'Min';
  static const String weatherMax = 'Max';
  static const String weatherWind = 'Wind';
  static const String weatherHumidity = 'Humidity';

  // ChangeCityPage
  static const String titleChangeCityPage = 'Change city';
  static const String errorLoadingCities =
      'There has been an error loading the cities.';
}
